--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'com.akaita.android:circular-seek-bar:1.0'
+
 }
